--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,3 +5,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 etikett.configs="ddc.turtle,regal.turtle,rpb.turtle"
+etikett.databaseFile="/tmp/databaseFile.turtle"
