add file upload functionality

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,5 +4,5 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 
-etikett.configs="ddc.turtle,regal.turtle,rpb.turtle"
-etikett.databaseFile="/tmp/databaseFile.turtle"
+etikett.configs="regal.turtle"
+etikett.databaseFile="/tmp/etikett.save.turtle"
