add all three turtle examples to config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,5 +4,5 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 
-etikett.configs="regal.turtle"
+etikett.configs="regal.turtle,ddc.turtle,rpb.turtle"
 etikett.databaseFile="/tmp/etikett.save.turtle"
