controll deployment over context param in application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,3 +6,7 @@ logger.application=DEBUG
 
 etikett.configs="regal.turtle,ddc.turtle,rpb.turtle"
 etikett.databaseFile="/tmp/etikett.save.turtle"
+
+http.port="9002"
+http.path="/tools/"
+application.context="/tools/etikett"
