Persist data in a mysql table instead of using an in-memory hash

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,8 +3,18 @@ application.langs="en"
 logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
+db.default.logStatements=true
+logger.com.jolbox=DEBUG // for EBean
 
-etikett.configs="regal.turtle,ddc.turtle,rpb.turtle"
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/etikett"
+db.default.user=etikett
+db.default.password="etikett"
+
+ebean.default="models.*"
+ebeanconfig.datasource.default="Etikett" 
+
+etikett.configs="regal.turtle"
 etikett.databaseFile="/tmp/etikett.save.turtle"
 
 http.port="9002"
