Clean up & Start with empty table in prod - fill data on startup only in dev mode

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,16 +6,19 @@ logger.application=DEBUG
 db.default.logStatements=true
 logger.com.jolbox=DEBUG // for EBean
 
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/etikett"
-db.default.user=etikett
-db.default.password="etikett"
+#---------Example mysql conf 
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://localhost/etikett"
+#db.default.user=etikett
+#db.default.password="etikett"
+
+#-------in-memory database
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play;MODE=MYSQL"
 
 ebean.default="models.*"
-ebeanconfig.datasource.default="Etikett" 
 
 etikett.configs="regal.turtle"
-etikett.databaseFile="/tmp/etikett.save.turtle"
 
 http.port="9002"
 http.path="/tools/"
