use mysql as default and bug fix creation of Etikett objects - An etikett object must have an uri, because it is used as primary key in the db

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,14 +7,17 @@ db.default.logStatements=true
 logger.com.jolbox=DEBUG // for EBean
 
 #---------Example mysql conf 
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="jdbc:mysql://localhost/etikett"
-#db.default.user=etikett
-#db.default.password="etikett"
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/etikett_test"
+db.default.user=etikett_test
+db.default.password="etikett_test"
+evolutionplugin=enabled
+applyEvolutions.default=true
+applyDownEvolutions.default=true
 
 #-------in-memory database
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play;MODE=MYSQL"
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play;MODE=MYSQL"
 
 ebean.default="models.*"
 
