Creates, Updates, Deletes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,8 +22,8 @@ applyDownEvolutions.default=true
 ebean.default="models.*"
 
 etikett.configs="regal.turtle"
-etikett.userImpl="controllers.HardCodedUser"
-etikett.admin-password="etikett_test"
+etikett.userImpl="helper.HardCodedUser"
+etikett.admin-password="admin"
 
 http.port="9002"
 http.path="/tools/"
