enable json upload for etikett

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,7 +4,7 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 db.default.logStatements=true
-logger.com.jolbox=DEBUG // for EBean
+logger.com.jolbox=WARN // for EBean
 
 #---------Example mysql conf 
 db.default.driver=com.mysql.jdbc.Driver
