--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,7 @@ ebean.default="models.*"
 etikett.configs="regal.turtle"
 etikett.userImpl="controllers.HardCodedUser"
 etikett.admin-password="etikett_test"
+etikett.imports=""
 
 http.port="9002"
 http.path="/tools/"
