--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@ ebean.default="models.*"
 
 etikett.configs="regal.turtle"
 etikett.userImpl="controllers.HardCodedUser"
-etikett.admin-password="etikett_test"
+etikett.admin-password="admin"
 etikett.imports=""
 
 http.port="9002"
