reformatting and renaming

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,6 +23,7 @@ ebean.default="models.*"
 
 etikett.configs="regal.turtle"
 etikett.userImpl="controllers.HardCodedUser"
+etikett.admin-user="admin"
 etikett.admin-password="admin"
 etikett.imports=""
 
