allow to set @id and @type alias via application.conf - work on type entry in labels.conf and context.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,6 +26,8 @@ etikett.userImpl="controllers.HardCodedUser"
 etikett.admin-user="admin"
 etikett.admin-password="admin"
 etikett.imports=""
+etikett.alias.id="id"
+etikett.alias.type="type"
 
 http.port="9002"
 http.path="/tools/"
