Add new /convert endpoint and basic multilingual support - Under /tools/etikett/convert an on-the-fly conversion of turtle to labels.json is provided. The form sends a form encoded POST to /convert. The form encoded data must contain the following parameters: file, format, language. - The etikett model has been updated and added with two fields: 'multilangLabel' is only visible for json generators but is not stored in the database. 'multiLangSerialized' is a String representation of the multilangLabel map. It is stored in the database and is not visible for json generators. - a new optional parameter 'lang' has been added to the '/' endpoint. It takes effect, if the parameter 'column=label' is present. The service accepts language codes and tries to return the proper label from the languageMap

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,9 +8,9 @@ logger.com.jolbox=WARN // for EBean
 
 #---------Example mysql conf 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/etikett_test"
-db.default.user=etikett_test
-db.default.password="etikett_test"
+db.default.url="jdbc:mysql://localhost/etikett?characterEncoding=UTF-8"
+db.default.user=etikett
+db.default.password="etikett"
 evolutionplugin=enabled
 applyEvolutions.default=true
 applyDownEvolutions.default=true
