support preset languages during label resolving

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,6 +28,7 @@ etikett.admin-password="admin"
 etikett.imports=""
 etikett.alias.id="id"
 etikett.alias.type="type"
+etikett.language="de"
 
 http.port="9002"
 http.path="/tools/"
