--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
   - ACTIVATOR_VERSION=1.3.5
 jdk: oraclejdk8
 before_script:
-  - wget http://downloads.typesafe.com/typesafe-activator/${ACTIVATOR_VERSION}/typesafe-activator-${ACTIVATOR_VERSION}-minimal.zip
+  - wget https://downloads.typesafe.com/typesafe-activator/${ACTIVATOR_VERSION}/typesafe-activator-${ACTIVATOR_VERSION}-minimal.zip
   - unzip typesafe-activator-${ACTIVATOR_VERSION}-minimal.zip
 script:
   - ./activator-${ACTIVATOR_VERSION}-minimal/activator test
