implement api CCLabelResolver

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,6 +6,9 @@ logger.application=DEBUG
 db.default.logStatements=true
 logger.com.jolbox=WARN // for EBean
 
+application.toscience.url="https://ellinet-dev.hbz-nrw.de"
+application.toscience.url.api="https://api.ellinet-dev.hbz-nrw.de"
+
 #---------Example mysql conf 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/etikett?characterEncoding=UTF-8"
