--- a/conf/OrcaMedientypen-de.properties
+++ b/conf/OrcaMedientypen-de.properties
@@ -1,21 +1,21 @@
-https://w3id.org/orca.nrw/medientypen/assessment=Assessment
-https://w3id.org/orca.nrw/medientypen/audio=Audio
-https://w3id.org/orca.nrw/medientypen/communication_of_contents=Inhaltsvermittlung
-https://w3id.org/orca.nrw/medientypen/course=Kurs
-https://w3id.org/orca.nrw/medientypen/diagram=Diagramm
-https://w3id.org/orca.nrw/medientypen/didactic_concept=Didaktisches Konzept
-https://w3id.org/orca.nrw/medientypen/drill_and_practice=Übung
-https://w3id.org/orca.nrw/medientypen/educational_game=Lernspiel
-https://w3id.org/orca.nrw/medientypen/image=Bild/Grafik
-https://w3id.org/orca.nrw/medientypen/map=Karte
-https://w3id.org/orca.nrw/medientypen/methodical_tool=Methodisches Werkzeug
-https://w3id.org/orca.nrw/medientypen/questionnaire=Fragebogen
-https://w3id.org/orca.nrw/medientypen/script=Skript
-https://w3id.org/orca.nrw/medientypen/sheet_music=Musiknoten
-https://w3id.org/orca.nrw/medientypen/simulation=Simulation
-https://w3id.org/orca.nrw/medientypen/slide=Präsentation
-https://w3id.org/orca.nrw/medientypen/spreedsheet=Tabelle
-https://w3id.org/orca.nrw/medientypen/text=Textdokument
-https://w3id.org/orca.nrw/medientypen/video=Video
-https://w3id.org/orca.nrw/medientypen/worksheet=Arbeitsmaterial
-https://w3id.org/orca.nrw/medientypen/other=Sonstiges
+https://medientypen.orca.nrw/assessment=Assessment
+https://medientypen.orca.nrw/audio=Audio
+https://medientypen.orca.nrw/communication_of_contents=Inhaltsvermittlung
+https://medientypen.orca.nrw/course=Kurs
+https://medientypen.orca.nrw/diagram=Diagramm
+https://medientypen.orca.nrw/didactic_concept=Didaktisches Konzept
+https://medientypen.orca.nrw/drill_and_practice=Übung
+https://medientypen.orca.nrw/educational_game=Lernspiel
+https://medientypen.orca.nrw/image=Bild/Grafik
+https://medientypen.orca.nrw/map=Karte
+https://medientypen.orca.nrw/methodical_tool=Methodisches Werkzeug
+https://medientypen.orca.nrw/questionnaire=Fragebogen
+https://medientypen.orca.nrw/script=Skript
+https://medientypen.orca.nrw/sheet_music=Musiknoten
+https://medientypen.orca.nrw/simulation=Simulation
+https://medientypen.orca.nrw/slide=Präsentation
+https://medientypen.orca.nrw/spreedsheet=Tabelle
+https://medientypen.orca.nrw/text=Textdokument
+https://medientypen.orca.nrw/video=Video
+https://medientypen.orca.nrw/worksheet=Arbeitsmaterial
+https://medientypen.orca.nrw/other=Sonstiges
