unify labels.json on paideia and hoerkaen. Additional give hint for url needed at etikett.import in application.conf'

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,7 +28,7 @@ etikett.configs="regal.turtle"
 etikett.userImpl="controllers.HardCodedUser"
 etikett.admin-user="admin"
 etikett.admin-password="admin"
-etikett.imports=""
+etikett.imports="file://"
 etikett.alias.id="id"
 etikett.alias.type="type"
 etikett.language="de"
