Add contributorAcademicDegree and contributorAffiliation to labels.json   - Change application.conf : remove references to ellinet project !

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,8 +6,8 @@ logger.application=DEBUG
 db.default.logStatements=true
 logger.com.jolbox=WARN // for EBean
 
-application.toscience.url="https://ellinet-dev.hbz-nrw.de"
-application.toscience.url.api="https://api.ellinet-dev.hbz-nrw.de"
+application.toscience.url="http://localhost"
+application.toscience.url.api="http://localhost:9000"
 
 #---------Example mysql conf 
 db.default.driver=com.mysql.jdbc.Driver
@@ -28,7 +28,8 @@ etikett.configs="regal.turtle"
 etikett.userImpl="controllers.HardCodedUser"
 etikett.admin-user="admin"
 etikett.admin-password="admin"
-etikett.imports="file://"
+#etikett.imports="http://localhost:9002/tools/etikett" # Anwendung bleibt hängen
+etikett.imports=""
 etikett.alias.id="id"
 etikett.alias.type="type"
 etikett.language="de"
