ersetze properties-Dateien durch Links; Umbenennung prop-Dateien

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,5 @@
 application.secret="P^NAcJO:o:C_PF:uVHlskn7aB5@B/mB5os?xg>k:U5>C[X=Qa:CxyDEn<?Dxb>Dr"
-application.langs="en"
+application.langs="de"
 logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
@@ -12,7 +12,7 @@ application.toscience.url.api="http://localhost:9000"
 #---------Example mysql conf 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/etikett?characterEncoding=UTF-8"
-db.default.user=etikett
+db.default.user="etikett"
 db.default.password="etikett"
 evolutionplugin=enabled
 applyEvolutions.default=true
@@ -29,7 +29,7 @@ etikett.userImpl="controllers.HardCodedUser"
 etikett.admin-user="admin"
 etikett.admin-password="admin"
 #etikett.imports="http://localhost:9002/tools/etikett" # Anwendung bleibt hängen
-etikett.imports=""
+etikett.imports="file:///home/kuss/local/etc/to.science/resources"
 etikett.alias.id="id"
 etikett.alias.type="type"
 etikett.language="de"
