Change default url to http://localhost

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,8 +6,8 @@ logger.application=DEBUG
 db.default.logStatements=true
 logger.com.jolbox=WARN // for EBean
 
-application.toscience.url="https://ellinet-dev.hbz-nrw.de"
-application.toscience.url.api="https://api.ellinet-dev.hbz-nrw.de"
+application.toscience.url="http://localhost"
+application.toscience.url.api="http://localhost:9000"
 
 #---------Example mysql conf 
 db.default.driver=com.mysql.jdbc.Driver
